:heavy_plus_sign: chore(pyproject): add country_converter and geopandas dependencies for heatmap creation
Added `country_converter` for country name normalization and `geopandas` for geospatial data handling. These dependencies support the creation of a heat map to visualize happiness rates by country around the world, ensuring consistency in country names and enabling efficient mapping and visualization of data.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ psycopg = "^3.2.3"
 scikit-learn = "^1.5.2"
 sqlalchemy = "^2.0.36"
 notebook = "^7.2.2"
+country-converter = "^1.2"
+geopandas = "^1.0.1"
 
 
 [build-system]
