--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 python = "^3.12"
 numpy = "^2.1.2"
 pandas = "^2.2.3"
-kafka-python = "^2.0.2"
 seaborn = "^0.13.2"
 matplotlib = "^3.9.2"
 psycopg = "^3.2.3"
@@ -18,6 +17,13 @@ sqlalchemy = "^2.0.36"
 notebook = "^7.2.2"
 country-converter = "^1.2"
 geopandas = "^1.0.1"
+xgboost = "^2.1.2"
+imageio = "^2.36.0"
+statsmodels = "^0.14.4"
+joblib = "^1.4.2"
+python-dotenv = "^1.0.1"
+six = "^1.16.0"
+kafka-python-ng = "^2.2.3"
 
 
 [build-system]
