--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ numpy = "^2.1.2"
 pandas = "^2.2.3"
 seaborn = "^0.13.2"
 matplotlib = "^3.9.2"
-psycopg = "^3.2.3"
 scikit-learn = "^1.5.2"
 sqlalchemy = "^2.0.36"
 notebook = "^7.2.2"
@@ -24,6 +23,7 @@ joblib = "^1.4.2"
 python-dotenv = "^1.0.1"
 six = "^1.16.0"
 kafka-python-ng = "^2.2.3"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
